# RD-Bot-Beta

./: .gitignore  README.md
Data Preperation/: Convert-Original-GARD-json-files.py  json_to_html.py  new_json_to_html.py
Data Preperation/Chatbot_Input_Files/: file_search_ready.jsonl  symptom_metadata.json
Data Preperation/Chatbot_Input_Files/V1.3/: 6877_Leigh-syndrome_V1.3.md  GARD-ContactUs.md
Data Preperation/Chatbot_Input_Files/V1.4/: 6877_Leigh-syndrome_General-info_V1.4.md  GARD-Page_About.md  GARD-Page_Contact-Us.md  GARD-Page_Home.md  GARD-Page_Resources.md  Index_Symptom_Leukodystrophy_V1.4.md  (+5 more)
Data Preperation/Outdated - No longer in Use files/: Bardet-Biedl-syndrome_WebText_FlatC+P.txt  Cystic-fibrosis_WebText_FlatC+P.txt  Dengue-disease_WebText_FlatC+P.txt  Leigh-syndrome_WebText_FlatC+P.txt  Muckle-wells-syndrome_WebText_FlatC+P.txt  Option A.txt  Option B.md  Option B.txt  Reformat_JSON_Files.py  Symptoms_JSON-to-Markdown.py  option A.md
Data Preperation/Scripts/: create_symptom_definitions_non-enriched.py  raw-disease-file_to_non-enriched.  vectorize_non-enriched_files.p
Data Preperation/raw_json_files/: 10423.json  10522.json  17723.json  6877.json  8370.json
GARD Chatbot App/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Project README.txt  docker-compose.yml  env.example  gard_chatbot_app_V2-2.py  pyproject.toml  requirements.txt  setup.py
GARD Chatbot App/.github/workflows/: ci.yml
GARD Chatbot App/archive/: Project README.txt  azure_filter_schema.json  classification_prompt.txt  disease_symptom_map.json  gard_chatbot_app.py  gard_chatbot_app_V2-0.py  gard_chatbot_app_V2-1.py  get_assistant_id_single-use.py  orchestration.py  organization_disease_map.json  organization_disease_map_recovered.json  organization_map_automated(old).json  services_classify_query_OLD.py  system_instruction(old).txt  upload_files_to_assistants_single-use.py
GARD Chatbot App/config/: filter_vocab.py  shared_data.py  shared_orchestration.py
GARD Chatbot App/data/: disease_symptom_map_automated.json  organization_map_automated(old).json  organization_map_automated.json
GARD Chatbot App/data_prep-curation/: create_organization_map.py  create_symptom_map.py  raw-disease-file_to_non-enriched.py  vectorize_non-enriched_files.py
GARD Chatbot App/handler data/: disease_symptom_map_automated.json  organization_map_automated.json
GARD Chatbot App/handler data creation/: create_organization_map.py
GARD Chatbot App/handler data prep/: create_symptom_map.py
GARD Chatbot App/handlers/: code_assistant.py  orgs.py  symptom.py
GARD Chatbot App/prompts/: classification_prompt2.txt  code_interpreter_instruction.txt  system_instruction(old).txt  system_instruction.txt
GARD Chatbot App/services/: plan_data_extraction.py  query_field_selector.py
GARD Chatbot App/tests/: __init__.py  test_handlers.py
GARD Chatbot App/utils/: classify_query.py  filtering.py  get_assistant_id_single-use.py  symptom_utils.py  upload_files_to_assistants_single-use.py
(+81 files in other folders)
